--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Page title</title>
 </head>
 <body>
+    <nav><h1>Header</h1></nav>
     <h1>Lorem, ipsum dolor.</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, quaerat.</p>
 </body>
